tests/compiler/undefinedTypeArgument1/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.8.2/tests/cases/compiler/undefinedTypeArgument1.ts`, Apache-2.0 License

var cats = new Array<WAWA>();
//~^ ERROR: Cannot find name 'WAWA'.